# YolovX-face-armor-detect

./: CMakeLists.txt  build.sh  debug.h  main.cpp  readme.md
Camera/Data/: 042090420369.mvdat
camera/hikvision/config/: camera_config.yaml
camera/hikvision/include/: CameraParams.h
camera/hikvision/src/: hikvision_camera.cpp
detector/include/: inference.h
detector/src/: inference.cpp
doc/html/: _c_a_m_e_r_a___l_o_g_8h_source.html  _camera_params_8h_source.html  _mv_device_base_8h_source.html  _mv_error_define_8h_source.html  _mv_gig_e_device_8h_source.html  _mv_include_8h_source.html  _mv_usb3_v_device_8h_source.html  _pixel_type_8h_source.html  _tl_factory_8h_source.html  annotated.html  camera__parms__debug_8h_source.html  camera_calibration_8h_source.html  class_armor_detector-members.html  class_armor_detector.html  class_c_calibration-members.html  class_c_calibration.html  class_c_undistort-members.html  class_c_undistort.html  class_file_operation-members.html  class_file_operation.html  class_l_o_g-members.html  class_l_o_g.html  class_mv_cam_ctrl_1_1_c_mv_gig_e_device-members.html  class_mv_cam_ctrl_1_1_c_mv_gig_e_device.html  class_mv_cam_ctrl_1_1_c_mv_gig_e_device__coll__graph.md5  class_mv_cam_ctrl_1_1_c_mv_gig_e_device__inherit__graph.map  class_mv_cam_ctrl_1_1_c_mv_gig_e_device__inherit__graph.md5  class_mv_cam_ctrl_1_1_c_mv_usb3_v_device-members.html  class_mv_cam_ctrl_1_1_c_mv_usb3_v_device.html  class_mv_cam_ctrl_1_1_c_mv_usb3_v_device__coll__graph.map  class_mv_cam_ctrl_1_1_c_mv_usb3_v_device__coll__graph.md5  class_mv_cam_ctrl_1_1_c_mv_usb3_v_device__inherit__graph.md5  class_mv_cam_ctrl_1_1_c_tl_factory-members.html  class_mv_cam_ctrl_1_1_c_tl_factory.html  class_mv_cam_ctrl_1_1_c_tl_factory__coll__graph.md5  class_mv_cam_ctrl_1_1_c_tl_factory__inherit__graph.map  class_mv_cam_ctrl_1_1_c_tl_factory__inherit__graph.md5  classcamera_1_1_hik_camera-members.html  classcamera_1_1_hik_camera.html  classes.html  (+288 more)
doc/html/search/: all_2.js  all_5.js  all_6.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  (+7 more)
doc/latex/: annotated.tex  class_armor_detector.tex  class_c_calibration.tex  class_c_undistort.tex  class_file_operation.tex  class_l_o_g.tex  class_mv_cam_ctrl_1_1_c_mv_gig_e_device.tex  class_mv_cam_ctrl_1_1_c_mv_gig_e_device__coll__graph.md5  class_mv_cam_ctrl_1_1_c_mv_gig_e_device__inherit__graph.md5  class_mv_cam_ctrl_1_1_c_mv_usb3_v_device.tex  class_mv_cam_ctrl_1_1_c_mv_usb3_v_device__coll__graph.md5  class_mv_cam_ctrl_1_1_c_mv_usb3_v_device__inherit__graph.md5  class_mv_cam_ctrl_1_1_c_tl_factory.tex  class_mv_cam_ctrl_1_1_c_tl_factory__coll__graph.md5  class_mv_cam_ctrl_1_1_c_tl_factory__inherit__graph.md5  classcamera_1_1_hik_camera.tex  dir_0403e069501c43ee539a0921c4b7de6d.tex  dir_0aab6ae8d9bef933d1922e6e7872d4bc.tex  dir_1a54879d5638b92ef92af7e10abac6f3.tex  dir_2dafb73f7c1403de64b5785a74f6010a.tex  dir_3576edaee8907e2bddee9de8a3751028.tex  dir_372bcb01bf2532ce0d116edec9db7a1e.tex  dir_5835090b39ffe6f2250413bfd7670538.tex  dir_69581566a3d7b966e4948f8279564ac6.tex  dir_73d0d7efd9d56b7c3f184f03dac7c477.tex  dir_8267f9f0a126f807962af3c18f3e86da.tex  dir_862e7e25c785328d22778b32dcfd87a2.tex  dir_8d9433177dc817784c962bbda0fc1c03.tex  dir_9482d016b9bdf9b94d16cc8d01cdbdde.tex  dir_95e29a8b8ee7c54052c171a88bb95675.tex  dir_ac55f4a5e0e43982ebbd03a044947f48.tex  dir_ad4825fe6aa5158649a234d35863eeba.tex  dir_af49b45ff41145d0845d99b106c9a164.tex  dir_b04c2a9e448049ee775665f0a0803bfd.tex  dir_bba024cd03edd7f9d6096b84e1006209.tex  dir_da5d1632785fe76936dfbb1271f3fb2e.tex  dir_ea6dbb17d377b2fe0e1348c09c2ab816.tex  dir_f18a1f0bf9dea6682158a49fc7153184.tex  dir_f19ed6069cd8d270d4bb8ad7e908eb6c.tex  dir_f89abcb304c928c7d889aa5625570de5.tex  (+69 more)
general/include/: general.h
general/src/: general.cpp
mindvision-cam-wrapper/: .gitignore  LICENSE  README.md
mindvision-cam-wrapper/demo/: camera_calib.cpp  camera_test.cpp
mindvision-cam-wrapper/include/: ImageInput.h  MVCameraInput.h  VideoInput.h
mindvision-cam-wrapper/src/: MVCameraInput.cpp  VideoInput.cpp
(+2 files in other folders)
